# scr_megamind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/Adafruit_ADXL343/: CMakeLists.txt
components/Adafruit_ADXL375/: CMakeLists.txt
components/Adafruit_BMP3XX/: CMakeLists.txt
components/Adafruit_BMP5xx/: CMakeLists.txt
components/Adafruit_BNO055/: CMakeLists.txt
components/Adafruit_GPS/: CMakeLists.txt
components/Adafruit_LSM6DS/: CMakeLists.txt
components/Adafruit_Sensor/: CMakeLists.txt  LICENSE.txt
components/LoRa/: CMakeLists.txt
components/SRAD_PHX/: CMakeLists.txt  Doxyfile  README.md  SRAD_PHX.h  SRAD_PHX_Ops.cpp  SRAD_PHX_Sensors.cpp  SRAD_PHX_State.cpp
components/SRAD_PHX/docs/: SRAD__PHX_8h_source.html  annotated.html  annotated_dup.js  classFLIGHT-members.html  classFLIGHT.html  classFLIGHT.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  structFlightData-members.html  structFlightData.html
components/SRAD_PHX/docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  functions_0.js  searchdata.js
main/: CMakeLists.txt  Ops.cpp  Sensors.cpp  State.cpp  scr_esp32_benchmark.cpp
